# Blues

./: .gitignore  ARCHITECTURE.md  BLUES_VALUES.md  Cargo.toml
crates/blues-agent/: Cargo.toml
crates/blues-agent/src/: lib.rs
crates/blues-cli/: Cargo.toml
crates/blues-cli/src/: lib.rs  main.rs
crates/blues-config/: Cargo.toml
crates/blues-config/src/: lib.rs
crates/blues-core/: Cargo.toml
crates/blues-core/src/: capability.rs  error.rs  event.rs  ids.rs  lib.rs  memory.rs  provenance.rs  status.rs
crates/blues-daemon/: Cargo.toml
crates/blues-daemon/src/: lib.rs  main.rs
crates/blues-mcp/: Cargo.toml
crates/blues-mcp/src/: lib.rs  main.rs
crates/blues-memory/: Cargo.toml
crates/blues-memory/examples/: smoke.rs
crates/blues-memory/src/: compiler.rs  embed.rs  engine.rs  lib.rs  recall.rs  store.rs  types.rs
crates/blues-memory/src/consolidate/: decay.rs  mod.rs
crates/blues-memory/tests/: engine_e2e.rs
crates/blues-model/: Cargo.toml
crates/blues-model/src/: lib.rs
crates/blues-plan/: Cargo.toml
crates/blues-plan/src/: lib.rs
crates/blues-protocol/: Cargo.toml  build.rs
crates/blues-protocol/proto/: blues.proto
crates/blues-protocol/src/: lib.rs
crates/blues-sandbox/: Cargo.toml
crates/blues-sandbox/src/: lib.rs
crates/blues-skill/: Cargo.toml
crates/blues-skill/src/: lib.rs
docs/architecture/: protocol-and-project.md
docs/ui/: cli.md  desktop.md  overview.md  vscode.md
