[package]
name        = "blues-cli"
version     = { workspace = true }
edition     = { workspace = true }
rust-version= { workspace = true }
license     = { workspace = true }
authors     = { workspace = true }
description = "Blues CLI client. Talks to blues-daemon via gRPC."

[[bin]]
name = "blues"
path = "src/main.rs"

[dependencies]
blues-core     = { workspace = true }
blues-protocol = { workspace = true }

serde              = { workspace = true }
serde_json         = { workspace = true }
anyhow             = { workspace = true }
thiserror          = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
tokio              = { workspace = true }
clap               = { workspace = true }
clap_complete      = { workspace = true }
ratatui            = { workspace = true }
crossterm          = { workspace = true }
indicatif          = { workspace = true }
owo-colors         = { workspace = true }
