[package]
name        = "blues-config"
version     = { workspace = true }
edition     = { workspace = true }
rust-version= { workspace = true }
license     = { workspace = true }
authors     = { workspace = true }
description = "Configuration loading chain and secrets store for Blues."

[dependencies]
blues-core  = { workspace = true }
serde       = { workspace = true }
toml        = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
async-trait = { workspace = true }
