[package]
name        = "blues-core"
version     = { workspace = true }
edition     = { workspace = true }
rust-version= { workspace = true }
license     = { workspace = true }
authors     = { workspace = true }
description = "Blues core types, traits, and errors. Shared by all blues-* crates."

[dependencies]
thiserror   = { workspace = true }
serde       = { workspace = true }
ulid        = { workspace = true }
time        = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
time       = { workspace = true, features = ["macros"] }
