[package]
name        = "blues-model"
version     = { workspace = true }
edition     = { workspace = true }
rust-version= { workspace = true }
license     = { workspace = true }
authors     = { workspace = true }
description = "Model router + provider abstractions (OpenAI-compat / Anthropic / Ollama)."

[dependencies]
blues-core  = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
async-trait = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
tokio       = { workspace = true }
futures     = { workspace = true }
