[package]
name        = "blues-protocol"
version     = { workspace = true }
edition     = { workspace = true }
rust-version= { workspace = true }
license     = { workspace = true }
authors     = { workspace = true }
description = "gRPC + MCP protocol stubs for Blues. proto -> Rust generated here."

[dependencies]
blues-core = { workspace = true }
tonic      = { workspace = true }
prost      = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }

[build-dependencies]
tonic-build         = { workspace = true }
protoc-bin-vendored = { workspace = true }
